--- a/caesar_cypher/Cargo.toml
+++ b/caesar_cypher/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
 
 [dependencies]
 clap = "2.34.0"
